[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pf"
version = "0.1"
requires-python = ">=3.12"
dependencies = [
  "openapi-core",
  "cryptography>=45.0.0",
  "sqlalchemy",
  "databases",
  "http-sfv",
  "fastapi>=0.115",
  "uvicorn>=0.34",
  "dateparser>=1.3.0",
  "tabulate>=0.9.0",
  "requests>=2.32.5",
  "pydantic",
  "textual-autocomplete>=4.0.6",
  "websockets>=13.0",
  "pyjwt>=2.12.1",
  "h2>=4.3.0",
]

[project.scripts]
pf = "pf.cli.pf.main:pf"
pfa = "pf.cli.pfa.main:pfa"
pfat = "pf.tui.app:pfat"

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "hatchling",
    "jinja2>=3.1.6",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "pytest-anyio",
    "ruff>=0.15.6",
    "pytest-env>=1.6.0",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--tb=short -n auto"
testpaths = [
    "src/pf",
    "tests",
]
timeout = 60

[tool.pytest_env]
HTTP_PROXY = { unset = true }
HTTPS_PROXY = { unset = true }
http_proxy = { unset = true }
https_proxy = { unset = true }
PYTHONASYNCIODEBUG = "1"
PYTHONUNBUFFERED = "1"
PF_LOG_LEVEL = "3"

[tool.pyright]
include = ["src/pf", "tests"]
exclude = [
"**/node_modules",
"**/__pycache__",
"tests/**",
"**/test_*.py",
"**/tui",
]
typeCheckingMode = "strict"

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "RUF", "S"]
[tool.ruff.lint.per-file-ignores]
"build/**" = []
"**" = ["S101", "S110", "S606"]
"tests/**" = ["S"]
#"**/conftest.py" = ["S101"]

[tool.mypy]
strict = true
