[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.wheel]
packages = ["src/provablyfine"]


[project]
name = "provablyfine"
authors = [
  {name = "Mathieu Lacage", email = "mathieu.lacage@cutebugs.net"},
]
maintainers = [
  {name = "Mathieu Lacage", email = "mathieu.lacage@cutebugs.net"},
]
description = "Centralized Access-Control for SSH"
readme = "README.md"
version = "0.4.0"
license = "AGPL-3.0-only"
license-files = ["LICENSE.md"]
keywords = ["SSH", "access-control", "bastion"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: Pydantic",
  "Framework :: Pytest",
  "Framework :: tox",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Natural Language :: English",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
  "cryptography>=45.0.0",
  "sqlalchemy",
  "http-sfv",
  "fastapi>=0.115",
  "uvicorn>=0.34",
  "tabulate>=0.9.0",
  "requests>=2.32.5",
  "pydantic",
  "textual",
  "textual-autocomplete>=4.0.6",
  "pyjwt>=2.12.1",
  "PyYAML>=6.0",
  "prometheus_client>=0.20.0",
  "provablyfine-client",
]

[project.urls]
Documentation = "https://docs.provablyfine.net"
Repository = "https://github.com/provablyfine/pf.git"
Issues = "https://github.com/provablyfine/pf/issues"

[project.scripts]
pf = "provablyfine.cli.pf.main:pf"
pfa = "provablyfine.cli.pfa.main:pfa"
pfat = "provablyfine.tui.app:pfat"
pf-api-rotate = "provablyfine.api.rotate:main"

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "hatchling",
    "jinja2>=3.1.6",
    "pyright>=1.1.409",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "pytest-anyio",
    "ruff>=0.15.6",
    "pytest-env>=1.6.0",
    "pytest-timeout>=2.4.0",
    "filelock>=3.29.0",
    "psutil>=7.2.2",
    "zensical>=0.0.44",
    "pre-commit>=4.6.0",
    "cram>=0.7",
    "tox>=4.54.0",
    "tox-uv>=1.35.2",
    "licensecheck>=2025.1.0",
    "mike",
    "codespell>=2.4.2",
    "towncrier>=24.0.0",
]

[tool.tox]
legacy_tox_ini = """
[tox]
env_list = py312, py313, py314
[testenv]
runner = uv-venv-lock-runner
commands = pytest {posargs}
"""

[tool.codespell]
skip = "*.min.js,*.min.css"
count = true
quiet-level = 3
ignore-words-list = "iTerm"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--tb=short -n auto"
testpaths = [
    "src/provablyfine",
    "tests",
]
timeout = 120

[tool.pytest_env]
HTTP_PROXY = { unset = true }
HTTPS_PROXY = { unset = true }
PYTHONASYNCIODEBUG = "1"
PYTHONUNBUFFERED = "1"
PF_LOG_LEVEL = "3"

[tool.pyright]
include = ["src/provablyfine", "tests", "packages/provablyfine-client/src/provablyfine_client"]
exclude = [
"**/node_modules",
"**/__pycache__",
"tests/**",
"**/test_*.py",
]
typeCheckingMode = "strict"

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "RUF", "S"]
[tool.ruff.lint.per-file-ignores]
"build/**" = []
"**" = ["S101", "S110", "S606"]
"tests/**" = ["S"]
"hatch_build.py" = ["S"]
#"**/conftest.py" = ["S101"]

[tool.mypy]
strict = true

[tool.towncrier]
package = "pf"
package_dir = "src"
filename = "CHANGELOG.md"
directory = "changelog.d"
title_format = "## {version} - {project_date}"
issue_format = "[#{issue}](https://github.com/provablyfine/pf/issues/{issue})"

[[tool.towncrier.type]]
directory = "feature"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "change"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = false

[tool.uv.workspace]
members = ["packages/provablyfine-client"]

[tool.uv.sources]
mike = { git = "https://github.com/squidfunk/mike.git" }
provablyfine-client = { workspace = true }
